# BoxEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.bat
Engine/: CMakeLists.txt  CMakePresets.json
Engine/Shader/: BlingPhone.hlsl
Engine/Shaders/: TestBox.hlsl
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/Public/: CoreMinimal.h
Engine/Source/Core/Public/BasicType/: Array.h  Map.h  String.h
Engine/Source/Core/Public/Math/: Matrix.h  Transform.h  Vector.h
Engine/Source/Editor/EditorMain/: CMakeLists.txt
Engine/Source/Editor/EditorMain/Private/: EditorMain.cpp
Engine/Source/Editor/EditorMain/Public/: EditorMain.h
Engine/Source/Launcher/: CMakeLists.txt
Engine/Source/Launcher/Private/: Launcher.cpp
Engine/Source/Launcher/Public/: Launcher.h
Engine/Source/Logging/: CMakeLists.txt
Engine/Source/Logging/Private/: Logging.cpp
Engine/Source/Logging/Public/: Logging.h
Engine/Source/Renderer/Private/D3D12RHI/: D3D12Adapter.h  D3D12CommandList.h  D3D12Common.h  D3D12Device.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12Resource.h  D3D12RootSignature.h  D3D12Shader.h  D3D12Viewport.h
Engine/Source/Renderer/Private/RenderCore/: RenderCommandList.cpp  RenderCommandList.h  RenderCore.cpp  RenderDevice.cpp  RenderDevice.h  RenderPass.cpp  RenderPass.h  RenderRootSignature.cpp  RenderRootSignature.h  RenderSwapChain.cpp  RenderSwapChain.h
Engine/Source/Renderer/Private/Renderer/: RenderPass.cpp  RenderPass.h  SceneRenderer.cpp
Engine/Source/Renderer/Private/Scene/: PrimitiveSceneInfo.h  Scene.cpp
Engine/Source/Renderer/Private/Viewport/: GameViewport.cpp
Engine/Source/Renderer/Public/Geometry/: Geometry.h
Engine/Source/Renderer/Public/RenderCore/: RenderCore.h
Engine/Source/Renderer/Public/Renderer/: SceneRenderer.h
Engine/Source/Renderer/Public/Scene/: PrimitiveSceneProxy.h  Scene.h
Engine/Source/Renderer/Public/Viewport/: GameViewport.h
Engine/Source/Rendering/RHI/: CMakeLists.txt
Engine/Source/Rendering/RHI/Private/D3D12RHI/: D3D12Adapter.cpp  D3D12Adapter.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12Commands.cpp  D3D12Commands.h  D3D12Common.h  D3D12Device.cpp  D3D12Device.h  D3D12Geometry.cpp  D3D12Geometry.h  D3D12Pass.cpp  D3D12Pass.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12RHI.cpp  D3D12RHI.h  D3D12RHICommon.h  D3D12Resources.cpp  D3D12Resources.h  D3D12Viewport.cpp  D3D12Viewport.h
Engine/Source/Rendering/RHI/Private/RHICore/: DynamicRHI.cpp  DynamicRHI.h  RHI.cpp  RHICommands.cpp  RHIGeometry.cpp  RHIViewport.cpp
Engine/Source/Rendering/RHI/Public/RHICore/: RHI.h  RHICommandList.h  RHICommands.h  RHICommon.h  RHIGeometry.h  RHIPass.h  RHIViewport.h
Engine/Source/Rendering/Renderer/: CMakeLists.txt
Engine/Source/Rendering/Renderer/Private/MeshProcessor/: MeshProcessor.cpp  VertexFactor.cpp
Engine/Source/Rendering/Renderer/Private/Runtime/: RenderEngine.cpp
Engine/Source/Rendering/Renderer/Private/Scene/: PrimitiveInfo.cpp  RenderingScene.cpp
Engine/Source/Rendering/Renderer/Private/SceneRenderer/: BaseRenderer.cpp  BaseSceneRenderer.cpp  DeferredShadingRenderer.cpp  SceneRenderer.cpp
Engine/Source/Rendering/Renderer/Private/TestScene/: TestScene.cpp  TestScene.h
Engine/Source/Rendering/Renderer/Private/Viewport/: Viewport.cpp
Engine/Source/Rendering/Renderer/Public/Geometry/: Box.h  MeshGeometry.h
Engine/Source/Rendering/Renderer/Public/MeshProcessor/: MeshProcessor.h  VertexFactor.h
Engine/Source/Rendering/Renderer/Public/Runtime/: RenderEngine.h
Engine/Source/Rendering/Renderer/Public/Scene/: CameraInfo.h  PrimitiveInfo.h  RenderingScene.h
Engine/Source/Rendering/Renderer/Public/SceneRenderer/: BaseRenderer.h  BaseSceneRenderer.h  DeferredShadingRenderer.h  SceneRenderer.h
Engine/Source/Rendering/Renderer/Public/Viewport/: Viewport.h
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Private/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  LogManager.cpp
Engine/Source/Runtime/Core/Private/Math/: Color.cpp
Engine/Source/Runtime/Core/Private/Runnable/: RunnableThread.cpp
Engine/Source/Runtime/Core/Public/: CoreMinimal.h  Types.h
Engine/Source/Runtime/Core/Public/Logging/: ILogger.h  LogLevel.h  LogManager.h
Engine/Source/Runtime/Core/Public/Math/: Color.h
Engine/Source/Runtime/Core/Public/QueueWork/: QueueWork.h  QueueWorkExecutor.h
Engine/Source/Runtime/Core/Public/Runnable/: Runnable.h  RunnableThread.h
Engine/Source/Runtime/Core/Public/UObject/: UObjectGlobals.h
Engine/Source/Runtime/CoreUObject/: CMakeLists.txt
Engine/Source/Runtime/CoreUObject/Public/: UObject.h
Engine/Source/Runtime/Engine/: CMakeLists.txt
Engine/Source/Runtime/Engine/Private/: Engine.cpp  GameViewportClient.cpp  World.cpp
Engine/Source/Runtime/Engine/Public/: Engine.h  GameViewportClient.h  World.h
Engine/Source/Runtime/Launch/: CMakeLists.txt
Engine/Source/Runtime/Launch/Private/: LaunchWindows.cpp
Engine/Source/Runtime/Launcher/: CMakeLists.txt
Engine/Source/Runtime/Launcher/Private/: Launcher.cpp
Engine/Source/Runtime/Launcher/Private/Windows/: WinMain.cpp  Window.cpp
Engine/Source/Runtime/Launcher/Public/: Launcher.h
Engine/Source/Runtime/Launcher/Public/Windows/: Window.h
Engine/Source/Runtime/Platform/: CMakeLists.txt
Engine/Source/Runtime/Platform/Private/Application/: WindowsApp.cpp
Engine/Source/Runtime/Platform/Private/CoreTypes/: String.cpp
Engine/Source/Runtime/Platform/Private/Process/: WindowsProcess.cpp
Engine/Source/Runtime/Platform/Public/: PlatformMinimal.h  PlatformTypes.h
Engine/Source/Runtime/Render/D3D12RHI/: CMakeLists.txt
Engine/Source/Runtime/Render/RDG/: CMakeLists.txt
Engine/Source/Runtime/Render/RDG/Private/: RDGTopo.h  (+1 more)
Engine/Source/Runtime/Render/RHI/: CMakeLists.txt
Engine/Source/Runtime/Render/RHICore/: CMakeLists.txt
Engine/Source/Runtime/Render/RenderCore/: CMakeLists.txt
Engine/Source/Runtime/Render/Renderer/: CMakeLists.txt
(+82 files in other folders)
